objects/Shift.object
<CustomObject>
    <fields>
        <fullName>IsDemoData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDemoData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkfsl__Facility_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The facility plan that’s linked to this shift.</description>
        <label>Facility Plan</label>
        <referenceTo>wkfsl__Facility_Plan__c</referenceTo>
        <relationshipLabel>Shifts</relationshipLabel>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkfsl__PlanningPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PlannerTrigger</label>
        <referenceTo>wkfsl__PlanningPeriod__c</referenceTo>
        <relationshipLabel>Shifts</relationshipLabel>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Shifts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Shifts</label>
    </listViews>
    <listViews>
        <fullName>My_Shifts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Shifts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>